[package]
name = "clumber"
version = "0.1.0"
edition = "2021"

[dependencies]
hcl-rs = "0.3"
serde_json = { version = "1", features = ["preserve_order"] }
serde = { version = "1", features = ["derive"] }
wasmtime = "0.35"
wasmtime-wasi = "0.35"
anyhow = "1"
indexmap = "1.8"
wit-bindgen-wasmtime = { git = "https://github.com/bytecodealliance/wit-bindgen.git" }
log = "0.4"
clap = { version = "3.1", features = ["derive"] }
bollard = "0.12"
smol = "1.2"
async-compat = "0.2"
futures = "0.3"
