[package]
name = "clumber-module-docker"
version = "0.1.0"
authors = ["Max Jöhnk <maxjoehnk@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen-rust = { git = "https://github.com/bytecodealliance/wit-bindgen.git" }
bollard = "0.12"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
